themes/highlight.css
p code.hljs{
	display:inline-flex;
}

code {
	/*white-space:pre;*/
}
span code{
	white-space:pre-line;
}

#texteditorerrorlayer .specialline,
#texteditorerrorlayer .specialinline{
	text-decoration:underline;
	font-weight:bold;
}
/*
.specialline li{
	opacity:0.5;
}

.specialline li.specialline{
	opacity:1;
}

.specialline ul{
	list-style:none;
}*/

span.codeline{
	/*opacity:0.5;*/
	white-space: pre;
}
span.specialline, span.specialinline{
	opacity:1;
}

